build working,, other changes