@@ -8,3 +8,5 @@ This module contains articles about JavaFX.
 - [Display Custom Items in JavaFX ListView](https://www.baeldung.com/javafx-listview-display-custom-items)
 - [Adding EventHandler to JavaFX Button](https://www.baeldung.com/javafx-button-eventhandler)
 - [How to Use a Custom Font in Java](https://www.baeldung.com/java-custom-font)
+
+```--module-path /home/hp-pc/Downloads/openjfx-17.0.10_linux-x64_bin-sdk/javafx-sdk-17.0.10/lib --add-modules javafx.controls,javafx.fxml```
